--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ###########
 # site.title, site.url, site.author.name
 
-title:   'Kalightortaio's Blog'
+title:   "Kalightortaio's Blog"
 author:
   name:
 
